// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskConsoleNav tests Snapshot 1`] = `
<TaskConsoleNav>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-1"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-1"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Task Inbox
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</TaskConsoleNav>
`;

exports[`TaskConsoleNav tests Snapshot with pathname 1`] = `
<TaskConsoleNav
  pathname="/TaskInbox"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-2"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={true}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-2"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="task-inbox"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="task-inbox"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="task-inbox"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Task Inbox
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</TaskConsoleNav>
`;
